Add Plaid account balance and transaction retrieval tests